Added new content for graphic page

--- a/3d.html
+++ b/3d.html
@@ -61,7 +61,14 @@
     <div class="flex flex-col pt-40 pb-16">
         <p class="text-[#678309] font-bold text-xl lg:text-2xl pb-2">2020-2023</p>
         <p class="font-bold text-5xl lg:text-6xl pb-4">3D Projects</p>
-        <p class="text-lg">Selected works from my 3D freelance design projects.</p>
+        <p class="text-lg">
+          Selected works from my 3D freelance design projects.<br />
+          Visit my Instagram
+          <a href="https://www.instagram.com/by__tatshani/" target="_blank" class="hover:text-[#A697AD]">
+            @by__tatshani
+          </a>
+          to view all my animated works.
+        </p>
     </div>
 
     <!-- GALLERY -->
