--- a/about.html
+++ b/about.html
@@ -83,103 +83,6 @@
 
     <div class="divider py-20"></div>
 
-    <!-- INTERESTS + HOBBIES -->
-    <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
-      <div class="col-span-2">
-        <p class="text-xl xl:text-2xl font-bold text-[#678309]">INTERESTS<br/>+ HOBBIES</p>
-      </div>
-      <div class="grid grid-cols-1 gap-2 justify-items-center">
-        <img
-            src="https://drive.google.com/uc?export=view&id=1Cu83NSk_2GQiafB8j0n4sfnR6ft0UvE2"
-            alt="image"
-            width="70"
-            height="70"
-        >
-        <p class="font-bold text-lg">aerial yoga</p>
-      </div>
-      <div class="grid grid-cols-1 gap-2 justify-items-center">
-        <img
-            src="https://drive.google.com/uc?export=view&id=1i0T-5FIEvWU9u5FeUbfCe_gnxn-fvUZ2"
-            alt="image"
-            width="95"
-            height="95"
-        >
-        <p class="font-bold text-lg">camping</p>
-      </div>
-      <div class="grid grid-cols-1 gap-2 justify-items-center">
-        <img
-            src="https://drive.google.com/uc?export=view&id=1ml79EFRgwopUBhPBVuneWZ84GCRbJJOv"
-            alt="image"
-            width="70"
-            height="70"
-        >
-        <p class="font-bold text-lg">cacao drinker</p>
-      </div>
-      <div class="grid grid-cols-1 gap-2 justify-items-center">
-        <img
-            src="https://drive.google.com/uc?export=view&id=1qr0NW11PKVFqqWAjhT-4uQax_nT1vnOv"
-            alt="image"
-            width="70"
-            height="70"
-        >
-        <p class="font-bold text-lg">freediving</p>
-      </div>
-    </div>
-
-    <div class="divider py-20"></div>
-
-    <!-- PERSONAL -->
-    <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
-      <div class="col-span-2">
-        <p class="text-xl xl:text-2xl font-bold text-[#678309]">PERSONAL</p>
-      </div>
-      <div class="col-span-2 grid grid-cols-1 gap-5">
-        <div>
-          <p class="text-xl lg:text-2xl font-bold">Age: 26</p>
-          <p class="text-base lg:text-lg">December 9, 1996</p>
-        </div>
-        <div class="flex flex-row">
-          <img
-              src="https://drive.google.com/uc?export=view&id=1qPLaP21iFkLm3JVywEPofrb0xHlb3TRN"
-              alt="image"
-              width="25"
-              height="25"
-          >
-          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">sagittarius</p>
-        </div>
-        <div class="flex flex-row">
-          <img
-              src="https://drive.google.com/uc?export=view&id=1wCa6SN6RlVQb0-_zQLeuCHHi-supY2z5"
-              alt="image"
-              width="25"
-              height="25"
-          >
-          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">scorpio</p>
-        </div>
-        <div class="flex flex-row">
-          <img
-              src="https://drive.google.com/uc?export=view&id=1MsSU0mIEk51fecfpncfcVR00mXFKv6iM"
-              alt="image"
-              width="25"
-              height="25"
-          >
-          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">aquarius</p>
-        </div>
-      </div>
-      <div class="col-span-2 grid grid-cols-1 gap-14 lg:gap-2">
-        <div>
-          <p class="text-xl lg:text-2xl font-bold">Gender/Pronoun</p>
-          <p class="text-base lg:text-lg">She/Her</p>
-        </div>
-        <div>
-          <p class="text-xl lg:text-2xl font-bold">Ethnicity</p>
-          <p class="text-base lg:text-lg">Filipino</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="divider py-20"></div>
-
     <!-- SPECIAL AWARDS -->
     <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
       <div class="col-span-2">
@@ -237,6 +140,103 @@
             12-Weeks Course in Interior Design
           </p>
         </div>
+      </div>
+    </div>
+
+    <div class="divider py-20"></div>
+
+    <!-- PERSONAL -->
+    <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
+      <div class="col-span-2">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309]">PERSONAL</p>
+      </div>
+      <div class="col-span-2 grid grid-cols-1 gap-5">
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Age: 26</p>
+          <p class="text-base lg:text-lg">December 9, 1996</p>
+        </div>
+        <div class="flex flex-row">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1qPLaP21iFkLm3JVywEPofrb0xHlb3TRN"
+              alt="image"
+              width="25"
+              height="25"
+          >
+          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">sagittarius</p>
+        </div>
+        <div class="flex flex-row">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1wCa6SN6RlVQb0-_zQLeuCHHi-supY2z5"
+              alt="image"
+              width="25"
+              height="25"
+          >
+          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">scorpio</p>
+        </div>
+        <div class="flex flex-row">
+          <img
+              src="https://drive.google.com/uc?export=view&id=1MsSU0mIEk51fecfpncfcVR00mXFKv6iM"
+              alt="image"
+              width="25"
+              height="25"
+          >
+          <p class="font-bold text-lg text-[#A697AD] pl-10 tracking-wider">aquarius</p>
+        </div>
+      </div>
+      <div class="col-span-2 grid grid-cols-1 gap-14 lg:gap-2">
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Gender/Pronoun</p>
+          <p class="text-base lg:text-lg">She/Her</p>
+        </div>
+        <div>
+          <p class="text-xl lg:text-2xl font-bold">Ethnicity</p>
+          <p class="text-base lg:text-lg">Filipino</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="divider py-20"></div>
+
+     <!-- INTERESTS + HOBBIES -->
+     <div class="grid grid-cols-2 gap-10 md:grid-cols-6 md:gap-5">
+      <div class="col-span-2">
+        <p class="text-xl xl:text-2xl font-bold text-[#678309]">INTERESTS<br/>+ HOBBIES</p>
+      </div>
+      <div class="grid grid-cols-1 gap-2 justify-items-center">
+        <img
+            src="https://drive.google.com/uc?export=view&id=1Cu83NSk_2GQiafB8j0n4sfnR6ft0UvE2"
+            alt="image"
+            width="70"
+            height="70"
+        >
+        <p class="font-bold text-lg text-[#A697AD]">aerial yoga</p>
+      </div>
+      <div class="grid grid-cols-1 gap-2 justify-items-center">
+        <img
+            src="https://drive.google.com/uc?export=view&id=1i0T-5FIEvWU9u5FeUbfCe_gnxn-fvUZ2"
+            alt="image"
+            width="95"
+            height="95"
+        >
+        <p class="font-bold text-lg text-[#A697AD]">camping</p>
+      </div>
+      <div class="grid grid-cols-1 gap-2 justify-items-center">
+        <img
+            src="https://drive.google.com/uc?export=view&id=1ml79EFRgwopUBhPBVuneWZ84GCRbJJOv"
+            alt="image"
+            width="70"
+            height="70"
+        >
+        <p class="font-bold text-lg text-[#A697AD]">cacao drinker</p>
+      </div>
+      <div class="grid grid-cols-1 gap-2 justify-items-center">
+        <img
+            src="https://drive.google.com/uc?export=view&id=1qr0NW11PKVFqqWAjhT-4uQax_nT1vnOv"
+            alt="image"
+            width="70"
+            height="70"
+        >
+        <p class="font-bold text-lg text-[#A697AD]">freediving</p>
       </div>
     </div>
 
