--- a/graphic.html
+++ b/graphic.html
@@ -205,7 +205,7 @@
                       alt="image"
                   >
                   <div class="content-details fadeIn-top">
-                  <h3 class="content-title">Cuadtrito Box</h3>
+                  <h3 class="content-title">Cuadrito Box</h3>
                   </div>
               <!-- </a> -->
           </div>
@@ -280,6 +280,75 @@
                   </div>
               <!-- </a> -->
           </div>
+          <div class="content">
+            <!-- <a href="graphic/casa-selma"> -->
+                <div class="content-overlay"></div>
+                <img
+                    class="content-image rounded-lg"
+                    src="https://drive.google.com/uc?export=view&id=141iRuVxqW4KCvdK4oKG_JEFLM4egooTA"
+                    alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                <h3 class="content-title">Lachies Lobster Pan Business Card</h3>
+                </div>
+            <!-- </a> -->
+        </div>
+        </div>
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=1Img_vuhH1adef5vtuF5jm1iLfBhy-d7c"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">JMarketing Intro Newsletter</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+            <!-- <a href="graphic/casa-selma"> -->
+                <div class="content-overlay"></div>
+                <img
+                    class="content-image rounded-lg"
+                    src="https://drive.google.com/uc?export=view&id=1LmYM3dpX_7vVxyC0qFljVx4semrZZyXe"
+                    alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                <h3 class="content-title">JMarketing Clutch Award Newsletter</h3>
+                </div>
+            <!-- </a> -->
+        </div>
+        </div>
+        <div class="grid grid-cols-1 gap-20 md:grid-cols-2 lg:gap-64">
+          <div class="content">
+              <!-- <a href="graphic/casa-selma"> -->
+                  <div class="content-overlay"></div>
+                  <img
+                      class="content-image rounded-lg"
+                      src="https://drive.google.com/uc?export=view&id=11dSxJ6t-o3r7HYzHwUii4qJfPzclIJki"
+                      alt="image"
+                  >
+                  <div class="content-details fadeIn-top">
+                  <h3 class="content-title">JMarketing Business Card</h3>
+                  </div>
+              <!-- </a> -->
+          </div>
+          <div class="content">
+            <!-- <a href="graphic/casa-selma"> -->
+                <div class="content-overlay"></div>
+                <img
+                    class="content-image rounded-lg"
+                    src="https://drive.google.com/uc?export=view&id=1nFBh6_aMjzOdx-CbNbQOdPCfGcPCa5fy"
+                    alt="image"
+                >
+                <div class="content-details fadeIn-top">
+                <h3 class="content-title">Goo Cookies Christmas Packaging</h3>
+                </div>
+            <!-- </a> -->
+        </div>
         </div>
     </div>
 
