--- a/index.html
+++ b/index.html
@@ -70,11 +70,24 @@
       <!-- GALLERY -->
       <div class="grid grid-cols-1 lg:grid-cols-3 gap-5">
         <div class="col-span-1 lg:col-span-2 grid grid-rows-1 lg:grid-rows-2 gap-5">
-          <div class="content h-full">
+          <div class="content h-full hidden lg:block">
             <a href="graphic">
               <div class="content-overlay"></div>
               <img
                 class="content-image rounded-lg h-full"
+                src="images/graphic-design-cover.png"
+                alt="image"
+              >
+              <div class="content-details fadeIn-top">
+                <h3 class="content-title">Graphic Design</h3>
+              </div>
+            </a>
+          </div>
+          <div class="content block lg:hidden">
+            <a href="graphic">
+              <div class="content-overlay"></div>
+              <img
+                class="content-image rounded-lg"
                 src="images/graphic-design-cover.png"
                 alt="image"
               >
